# nextgisutilities

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  commonutils.cpp  lwgeom_lib.cpp  lwgeom_lib.h  ng_cutter.cpp  ogr2ogr_lib.cpp  ogr2ogr_lib.h  ogrlayerdecorator.cpp  version.h
cmake/: FindExtLWGEOM.cmake  FindGDAL.cmake  FindGEOS.cmake  util.cmake
